Change just to show new branch functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Simple Calculator</title>
 </head>
 <body>
-<p>This is going to be great!</p>
+<p>Making progress learning Git!</p>
 </body>
 </html>
