--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Simple Calculator</title>
-</head>
-<body>
-<p>Making progress learning Git!</p>
-</body>
+  </head>
+  <body>
+    <p>I created a new branch!</p>
+  </body>
 </html>
