--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Simple Calculator</title>
   </head>
   <body>
-    <p>I created a new branch!!!</p>
+    <p>I merged my new branch!!!</p>
   </body>
 </html>
